apps/readarr/overlays/prod/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: readarr-dtrl
  namespace: media
spec:
  host: readarr-service.media.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
