apps/readarr/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: readarr-virtual-service
  namespace: media
spec:
  hosts:
  - "booksearch.securefamily.tv"
  gateways:
  - default/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8787
        host: readarr-service.media.svc.cluster.local
